# lang-pz3

./: README.md  langgraph.json  list-projects.py  pyproject.toml  requirements.txt  setup.py  test-key.py  test-project-exists.py  use-workflow2.py
.langgraph_api/: .langgraph_ops.pckl
agent/: 007-workflow.py  README.md  requirements.txt  standalone_bond7_agent.py  test-bond7-agent.py  test_local_mem-example.py  test_workflow2_local.py  workflow.py  workflow2.py  workflow_fixed.py  workflowbond7.py  workflowbond7_openai.py
