[tool.poetry]
name = "lang-pz-workflow"
version = "0.1.0"
description = "LangGraph workflow for contractor service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = ">=0.1.0"
langchain-openai = "^0.3.12"
langchain = "^0.3.23"
langsmith = "^0.3.28"
pydantic = ">=2.0,<3.0"
requests = ">=2.0.0"
multidict = "6.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"